after jared comments on full draft.

--- a/dedication.tex
+++ b/dedication.tex
@@ -1,1 +1,3 @@
-To Katniss, who is the best kitty in the world.
+% I dedicate this dissertation to all the women in science who came before me. Their dedication, hard work, and sacrifice have carved out a  space for women in the field of science. In my undergraduate, I had the privilege to be mentored by remarkable women, Renate Kupke, Rosalie McGurk, Claire Max, and Constance Rockosi.  We aspire to our role models. Because of you all, I could imagine myself pursuing higher education and contributing to my field. You all set the wheels in motion. 
+
+Dedication. Figure something out.
