--- a/report.bib
+++ b/report.bib
@@ -1091,3 +1091,135 @@ archivePrefix = {arXiv},
   year={2011},
   organization={Optical Society of America}
 }
+
+
+
+@article{fauvarque2019kernel,
+  title={Kernel formalism applied to Fourier-based wave-front sensing in presence of residual phases},
+  author={Fauvarque, Olivier and Janin-Potiron, Pierre and Correia, Carlos and Br{\^u}l{\'e}, Yoann and Neichel, Benoit and Chambouleyron, Vincent and Sauvage, Jean-Francois and Fusco, Thierry},
+  journal={JOSA A},
+  volume={36},
+  number={7},
+  pages={1241--1251},
+  year={2019},
+  publisher={Optical Society of America}
+}
+
+@article{hutterer2019real,
+  title={Real-time adaptive optics with pyramid wavefront sensors: part I. A theoretical analysis of the pyramid sensor model},
+  author={Hutterer, Victoria and Ramlau, Ronny and Shatokhina, Iuliia},
+  journal={Inverse Problems},
+  volume={35},
+  number={4},
+  pages={045007},
+  year={2019},
+  publisher={IOP Publishing}
+}
+
+@inproceedings{shatokhina2014fast,
+  title={Fast algorithm for wavefront reconstruction in XAO/SCAO with pyramid wavefront sensor},
+  author={Shatokhina, Iuliia and Obereder, Andreas and Ramlau, Ronny},
+  booktitle={Adaptive Optics Systems IV},
+  volume={9148},
+  pages={91480P},
+  year={2014},
+  organization={International Society for Optics and Photonics}
+}
+
+
+
+@misc{reine2005encyclopedia,
+  title={Encyclopedia of Modern Optics 2005},
+  author={Reine, MB},
+  year={2005},
+  publisher={Academic, London}
+}
+
+
+@misc{Liang503,
+  author        = {Rongguang Liang},
+  title         = {Lecture notes in Optical Design and Instrumentation II},
+  month         = {April},
+  year          = {2018},
+  publisher={Wyant College of Optical Sciences}
+}
+
+@misc{sasianclass,
+  author        = {José Sasián},
+  title         = {Lecture notes in Lens Design},
+  month         = {December},
+  year          = {2019},
+  publisher={Wyant College of Optical Sciences}
+}
+
+
+ @misc{edmundoptic, 
+ title={12.7 x 50.8mm EFL 90° Protected Gold 175Å Off-Axis Parabolic Mirror}, 
+ url={https://www.edmundoptics.com/p/127-x-254mm-pfl-90deg-off-axis-parabolic-bare-gold-mirror/3914}, 
+ journal={Edmund Optics Worldwide}} 
+ 
+
+@book{hecht2002optics,
+  title={Optics},
+  author={Hecht, Eugene and Zajac, Alfred},
+  volume={5},
+  year={2002},
+  publisher={Addison Wesley San Francisco}
+}
+
+@book{hardy,
+  title={Adaptive optics for astronomical telescopes},
+  author={Hardy, John W},
+  volume={16},
+  year={1998},
+  publisher={Oxford University Press on Demand}
+}
+
+@article{noll1976zernike,
+  title={Zernike polynomials and atmospheric turbulence},
+  author={Noll, Robert J},
+  journal={JOsA},
+  volume={66},
+  number={3},
+  pages={207--211},
+  year={1976},
+  publisher={Optical Society of America}
+}
+
+@inproceedings{beuzit2008sphere,
+  title={SPHERE: a planet finder instrument for the VLT},
+  author={Beuzit, Jean-Luc and Feldt, Markus and Dohlen, Kjetil and Mouillet, David and Puget, Pascal and Wildi, Francois and Abe, Lyu and Antichi, Jacopo and Baruffolo, Andrea and Baudoz, Pierre and others},
+  booktitle={Ground-based and airborne instrumentation for astronomy II},
+  volume={7014},
+  pages={701418},
+  year={2008},
+  organization={International Society for Optics and Photonics}
+}
+
+@article{jovanovic2019keck,
+  title={The Keck Planet Imager and Characterizer: demonstrating advanced exoplanet characterization techniques for future extremely large telescopes},
+  author={Jovanovic, Nemanja and Delorme, Jacques-Robert and Bond, Charlotte Z and Cetre, Sylvain and Mawet, Dimitri and Echeverri, Daniel and Wallace, James K and Bartos, Randy and Lilley, Scott and Ragland, Sam and others},
+  journal={arXiv preprint arXiv:1909.04541},
+  year={2019}
+}
+
+@article{macintosh2014first,
+  title={First light of the gemini planet imager},
+  author={Macintosh, Bruce and Graham, James R and Ingraham, Patrick and Konopacky, Quinn and Marois, Christian and Perrin, Marshall and Poyneer, Lisa and Bauman, Brian and Barman, Travis and Burrows, Adam S and others},
+  journal={proceedings of the National Academy of Sciences},
+  volume={111},
+  number={35},
+  pages={12661--12666},
+  year={2014},
+  publisher={National Acad Sciences}
+}
+
+@inproceedings{sanchez2020design,
+  title={Design study for a 3-sided reflective pyramid wavefront sensor for Shane AO},
+  author={Sanchez, Dominic F and Chun, Mark and Bond, Charlotte Z and Hinz, Philip M},
+  booktitle={Adaptive Optics Systems VII},
+  volume={11448},
+  pages={114483N},
+  year={2020},
+  organization={International Society for Optics and Photonics}
+}
